# catboost-wasm-demo

./: .gitignore  BATCH_PREDICTION_GUIDE.md  CMakeLists.txt  COMPILATION_GUIDE.md  README.md  README_GITHUB.md  TECHNICAL_DETAILS.md  build.sh  create_model.py  push_to_github.sh
.github/workflows/: build.yml
models/: demo_model.json
src/: catboost_stub.cpp  catboost_wrapper.cpp
web/: catboost_wasm.js  demo_model.cbm  index.html  main.js  server.py  test.html  worker.js
